<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nombre</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTRAR</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">BIENVENIDO A eXtreme Food</string>
    <string name="btn_logout">BUSCAR</string>
    <string name="hint_birthdate">Fecha de Nacimiento</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_sex">Sexo</string>
    <string name="hint_find">Que desea Comer?</string>

</resources>